--- a/style.css
+++ b/style.css
@@ -22,11 +22,11 @@
 .blpwp_spot {height:2em;background: #777c;color:#fff;display:block;font-size: 1.5em;line-height: 2em;font-weight:bold;text-align:center;margin-top: -2em;position:relative;}
 .blpwp_spot:empty {display:none}
 .blpwp_info {padding: 0 .5em;margin-top: 1em;}
-.blpwp_info h5 {margin:0;font-weight:bold;font-size:1.5em;padding:0 0 .5em 0;line-height:1.3em;word-break: break-word;}
-.blpwp_info h6 {margin:0;font-weight:normal;font-size:1.2em;padding:0 0 .5em 0;line-height:1.3em;word-break: break-word;}
-.blpwp_info h4 {margin:0;font-weight:bold;font-size:1em;padding:0 0 .5em 0;line-height:1em;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-transform:uppercase;display:flex;align-items:center;justify-content:flex-start;/* margin-right: .5em; */}
-.blpwp_info h4 img {width:2.5em;height:2.5em;margin-right: .5em;}
-.blpwp_info h3 {margin:0;color:#777}
+.blpwp_info .h5 {margin:0;font-weight:bold;font-size:1.5em;padding:0 0 .5em 0;line-height:1.3em;word-break: break-word;}
+.blpwp_info .h6 {margin:0;font-weight:normal;font-size:1.2em;padding:0 0 .5em 0;line-height:1.3em;word-break: break-word;}
+.blpwp_info .h4 {margin:0;font-weight:bold;font-size:1em;padding:0 0 .5em 0;line-height:1em;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-transform:uppercase;display:flex;align-items:center;justify-content:flex-start;/* margin-right: .5em; */}
+.blpwp_info .h4 img {width:2.5em;height:2.5em;margin-right: .5em;}
+.blpwp_info .h3 {margin:0;color:#777}
 .horizontal .blpwp_wrap {flex-direction:column;}
 .vertical .blpwp_wrap {flex-direction:row;}
 .vertical .blpwp_info {padding:0 0 0 1em;flex: 0 0  65%;width: 65%;}
